# crane-dynamics-simulator

./: .gitignore  LICENSE.txt  README-HowTo.md  README-Reference.md  README-Tutorial.md  README.md
core/CDS/: CDS_Calc_Energy.m  CDS_Helper_PropPointer.m  CDS_Helper_StrOut.m  CDS_Param.m  CDS_Param_Const.m  CDS_Param_Free.m  CDS_Param_Input.m  CDS_Param_Input_Fun.m  CDS_Param_Lambda.m  CDS_Param_u.m  CDS_Param_x.m  CDS_Params.m  CDS_Point.m  CDS_Points.m  CDS_Solution.m  CDS_SolutionExp.m  CDS_SolutionInterpolated.m  CDS_SolutionSaved.m  CDS_SolutionSim.m  CDS_Solution_Animate.m  CDS_Solution_Export.m  CDS_Solution_GetData.m  CDS_Solution_Plot.m  CDS_Solver.m  CDS_Solver_GenerateEquations.m  CDS_Solver_ODEs.m  CDS_Solver_ODEs_Eval.m  CDS_Solver_ODEs_Export.m  CDS_Solver_Options.m  CDS_Solver_ReformEquations.m  CDS_SystemDescription.m  CDS_T.m
core/Models/: CDS_FindIncludes.m  CDSm.m  CDSm_C3.m  CDSm_C3_1p.m  CDSm_C3_2p.m  CDSm_C3_3p.m  CDSm_C3_ImportExp_v1.m  CDSm_C3_noSheave.m  CDSm_C3_noSheave2P.m  CDSm_C3_sheave.m  CDSm_C3_sheave2P.m  CDSv.m  CDSv_C3.m  CDSvb_C3_Builder.m
core/Utilities/: CDSu_Analytic_1P.m  CDSu_PlotMultiple.m
core/includes_matlab/: CDS_GetDataLocations.m  CDS_IncludeModels.m  CDS_IncludeSimulator.m  CDS_IncludeUtilities.m
data/experiments_results/2021-11-29/: readme.txt
data/experiments_results/2021-12-16/: bj_stationary45up_2021_12_16_v1.csv  raw_Stationary_PL_withT.csv  raw_Stationary_PL_withoutT.csv  readme.txt
data/experiments_results/2021-12-16_Processed/: compare_Tracker.xlsx  compare_withT.xlsx  compare_withoutT.xlsx
lib_ubuntu/: .gitignore
lib_ubuntu/instructions/: Install_Instructions_Ubuntu.txt  ubuntu_install_sundials.sh
lib_windows/: .gitignore
lib_windows/instructions/: Install_Instructions_Windows.txt
lib_windows/instructions/vs_buildSettings_sundials/: CMakeSettings.json
run_matlab/Evaluate/: ComapreAnalytic_4Bar.m  ComapreAnalytic_Pendulum.m  CompareScaled_PendulumCart.m  CompareSolvers_2Constraints.m  CompareSolvers_3P_1C.m
run_matlab/Examples/: E10_TriplePendulumCartDriven.m  E11_4BarLinkage.m  E12_Pulley.m  E13_ParticleOnPath_Fancy.m  E1_FallingParticle.m  E2_ProjectileParticle.m  E3_ParticleOnPath_A.m  E4_ParticleOnPath_B.m  E5_ParticleOnCone.m  E6_ParticleOnSphere.m  E7_Pendulum3D.m  E8_TriplePendulum.m  E9_TriplePendulumCart.m
run_matlab/SimC3/: C3_ImportMultiple.m  C3_SimMultiple.m  CDS_FindIncludes.m  run_C3ExpSim_ExportSun.m  run_C3ExpSim_ImportMultiple.m  run_C3Exp_VerifyDataProcessing.m  run_C3_ExportSun.m  run_C3_ImportSunResults.m  run_C3_Normal.m  run_C3_Overrides.m  run_C3_SimMultiple.m  run_C3_UseCaching.m
run_matlab/Tests/: IntegrationTest.m  IntegrationTest_1.m  IntegrationTest_2.m  IntegrationTest_3.m  IntegrationTest_4.m  IntegrationTest_5.m  Run_IntegrationTests.m
run_sundials/: .gitignore  clearBuild.ps1  rebuild.ps1  runExe.ps1  ubuntu_buildrun.sh
run_sundials/src/: CMakeLists.txt  CMakeSettings.json
run_sundials/src/SimC3/: C3_main.cpp  CMakeLists.txt
run_sundials/src/test_armadillo/: CMakeLists.txt  test_arma.cpp
run_sundials/src/test_monarch/: test_monarch.m  test_monarch_m.script  test_monarch_mcc.script
run_sundials/src/test_sundials/: CMakeLists.txt
